Fix: mobile nav button z-index

--- a/src/app/components/styles/Navbar.css
+++ b/src/app/components/styles/Navbar.css
@@ -75,15 +75,17 @@
 }
 
 .nav-button {
-  display: none;
+  display: flex;
+  flex: 1 1 0%;
+  justify-content: flex-end;
+  align-items: center;
+  z-index: 2000 !important;
+  position: relative;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (min-width: 640px) {
   .nav-button {
-    display: flex;
-    flex: 1 1 0%;
-    justify-content: flex-end;
-    align-items: center;
+    display: none;
   }
 }
 
